--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -27,7 +27,8 @@
       src="https://kit.fontawesome.com/45d574a1cc.js"
       crossorigin="anonymous"
     ></script>
-    <link href="./style.css" rel="stylesheet" />
+    <link href="../css파일/style.css" rel="stylesheet" />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard-jp.css" />
   </head>
   <body>
     <!-- header부분 -->
@@ -149,7 +150,7 @@
           </div>
           <!-- 커리어 인사이트 콘텐츠 리스트 부분 -->
           <ul class="career_content_list">
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -164,7 +165,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -179,7 +180,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -194,7 +195,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -209,7 +210,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -224,7 +225,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -239,7 +240,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -254,7 +255,7 @@
                 </div>
               </a>
             </li>
-            <li class=".career_content_list_li">
+            <li class="career_content_list_li">
               <a class="content_card" target="_blank" data-attribute-id="home__exContent__click" data-ex-content-id="1445" data-country="KR" data-platform="brunch" data-creator="초롱" data-title="1%의 성공을 만들기 위한 99%의 실패 이야기" data-interest-tag="Career Advice, Career Search, Work Productivity" data-landing-url="https://brunch.co.kr/@sukyoung59/29" href="https://brunch.co.kr/@sukyoung59/29">
                 <div class="content_card_img">
                   <img src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Ft1.daumcdn.net%2Fbrunch%2Fservice%2Fuser%2F6hd6%2Fimage%2FlSTyyyW-JLINHRmzHi6Earq1FJE.png&amp;w=500&amp;q=75" alt="1%의 성공을 만들기 위한 99%의 실패 이야기">
@@ -641,6 +642,7 @@
         <div class="recruit_header set_center">
           <h2>채용정보를 찾고계셨나요?</h2>
         </div>
+        <!-- 채용공고 -->
         <div class="recruit_menu_grid">
           <div class="recruit_item">
             <a class="recruit_item_icon" data-attribute-id="home__recruit__click" data-kind="position" href="/wdlist">
@@ -650,24 +652,126 @@
                 </svg>
               </span>
             </a>
-            
+            <a href="/wdlist" class="recruit_item_text set_center" aria-label="" data-attribute-id="home__recruit__click" data-kind="position">
+              <span class="sub_button_label">채용공고
+                <span class="recruit_item_endicon SvgIconRoot">
+                  <svg class="root__svg__DKYBi" viewBox="0 0 18 18">
+                    <path d="m11.955 9-5.978 5.977a.563.563 0 0 0 .796.796l6.375-6.375a.563.563 0 0 0 0-.796L6.773 2.227a.562.562 0 1 0-.796.796L11.955 9z"></path>
+                  </svg>
+                </span>
+              </span>
+            </a>
           </div>
-          
-          <div></div>
-          <div></div>
-          <div></div>
-
+          <!-- 내 프로필 -->
+          <div class="recruit_item">
+            <a class="recruit_item_icon" data-attribute-id="home__recruit__click" data-kind="profile" href="/profile">
+              <span class="SvgIconRoot">
+                <svg class="root__svg__DKYBi" viewBox="0 0 32 32">
+                  <path d="M18.812 14.36c-.722.917-1.172 1.905-1.188 2.959-.023 1.658.907 2.901 2.613 3.605l.132.044c3.985 1.027 6.615 3.38 6.615 5.748L27 28.118c0 .03-.222.215-.4.215H5.33c-.157 0-.314-.14-.314-.203L5 26.705c0-2.283 2.384-4.493 6.185-5.564.349-.079.896-.273 1.458-.616.885-.54 1.504-1.297 1.654-2.301a1 1 0 1 0-1.978-.296c-.05.333-.293.63-.719.89-.345.21-.703.338-.909.385C6.075 20.503 3 23.353 3 26.716l.016 1.426c0 1.214 1.103 2.191 2.313 2.191h21.272c1.213-.002 2.399-.995 2.399-2.226l-.016-1.403c0-3.432-3.313-6.414-8.044-7.654-.944-.404-1.327-.932-1.316-1.702.008-.541.284-1.147.76-1.75.31-.394.622-.691.81-.84l.1-.092c1.409-1.474 2.319-3.428 2.319-5.333 0-4.169-3.488-7.666-7.648-7.666-4.158 0-7.647 3.498-7.647 7.666 0 1.795.506 3.33 1.55 4.628a1 1 0 1 0 1.558-1.255c-.748-.93-1.108-2.02-1.108-3.373 0-3.065 2.595-5.666 5.647-5.666 3.054 0 5.648 2.6 5.648 5.666 0 1.329-.67 2.786-1.722 3.906a7.46 7.46 0 0 0-1.079 1.122z"></path>
+                </svg>
+              </span>
+            </a>
+            <a href="/profile" class="recruit_item_text set_center" aria-label="" data-attribute-id="home__recruit__click" data-kind="profile">
+              <span class="sub_button_label">내 프로필
+                <span class="recruit_item_endicon SvgIconRoot">
+                  <svg class="root__svg__DKYBi" viewBox="0 0 18 18">
+                    <path d="m11.955 9-5.978 5.977a.563.563 0 0 0 .796.796l6.375-6.375a.563.563 0 0 0 0-.796L6.773 2.227a.562.562 0 1 0-.796.796L11.955 9z"></path>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </div>
+          <!-- 매치업 -->
+          <div class="recruit_item">
+            <a class="recruit_item_icon" data-attribute-id="home__recruit__click" data-kind="matchup" href="/matchup/intro">
+              <span class="SvgIconRoot">
+                <svg class="root__svg__DKYBi" viewBox="0 0 32 32">
+                  <path d="M11.667 28.667a1 1 0 0 1-1-1v-7h-2v7a1 1 0 0 1-1 1H2.333a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1H17a1 1 0 0 1 1 1v4.333h11a1 1 0 0 1 .993.884l.007.116v12a1 1 0 1 1-2 0v-11H18v15.334h11a1 1 0 1 1 0 2H11.667zM16 6H3.333v20.667h3.334v-7a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v7H16V6zm5 12.333c.736 0 1.333.597 1.333 1.334V21a1.333 1.333 0 1 1-2.666 0v-1.333c0-.737.597-1.334 1.333-1.334zM21 13c.736 0 1.333.597 1.333 1.333v1.334a1.333 1.333 0 1 1-2.666 0v-1.334c0-.736.597-1.333 1.333-1.333zM8 13a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-.667a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1H8zm0-5.333a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-.667a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1H8z"></path>
+                </svg>
+              </span>
+            </a>
+            <a href="/profile" class="recruit_item_text set_center" aria-label="" data-attribute-id="home__recruit__click" data-kind="matchup">
+              <span class="sub_button_label">매치업
+                <span class="recruit_item_endicon SvgIconRoot">
+                  <svg class="root__svg__DKYBi" viewBox="0 0 18 18">
+                    <path d="m11.955 9-5.978 5.977a.563.563 0 0 0 .796.796l6.375-6.375a.563.563 0 0 0 0-.796L6.773 2.227a.562.562 0 1 0-.796.796L11.955 9z"></path>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </div>
+          <!-- 직군별 연봉 -->
+          <div class="recruit_item_end">
+            <a class="recruit_item_icon" data-attribute-id="home__recruit__click" data-kind="salary" href="/salary">
+              <span class="SvgIconRoot">
+                <svg class="root__svg__DKYBi" viewBox="0 0 32 32">
+                  <path d="M10.667 21.667a3.67 3.67 0 0 1 3.528 2.666H28a1 1 0 0 1 0 2l-13.805.001a3.67 3.67 0 0 1-7.057 0H4a1 1 0 1 1 0-2h3.138a3.67 3.67 0 0 1 3.529-2.667zm0 2a1.668 1.668 0 0 0 0 3.333 1.668 1.668 0 0 0 0-3.333zm10.666-11.334A3.67 3.67 0 0 1 24.862 15H28a1 1 0 0 1 0 2h-3.138a3.67 3.67 0 0 1-7.057 0H4a1 1 0 0 1 0-2h13.805a3.67 3.67 0 0 1 3.528-2.667zm0 2a1.668 1.668 0 0 0 0 3.334 1.668 1.668 0 0 0 0-3.334zM10.667 3a3.67 3.67 0 0 1 3.528 2.666H28a1 1 0 0 1 0 2H14.195a3.67 3.67 0 0 1-7.057 0H4a1 1 0 1 1 0-2h3.138A3.67 3.67 0 0 1 10.667 3zm0 2a1.668 1.668 0 0 0 0 3.333 1.668 1.668 0 0 0 0-3.333z"></path>
+                </svg>
+              </span>
+            </a>
+            <a href="/profile" class="recruit_item_text set_center" aria-label="" data-attribute-id="home__recruit__click" data-kind="matchup">
+              <span class="sub_button_label">직군별 연봉
+                <span class="recruit_item_endicon SvgIconRoot">
+                  <svg class="root__svg__DKYBi" viewBox="0 0 18 18">
+                    <path d="m11.955 9-5.978 5.977a.563.563 0 0 0 .796.796l6.375-6.375a.563.563 0 0 0 0-.796L6.773 2.227a.562.562 0 1 0-.796.796L11.955 9z"></path>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </div>            
         </div>
       </section>
-      <footer>
-        <div>
-          <img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Flogo_wanted_black.png&w=145&q=100" alt="wanted">
+      <!-- footer 부분 -->
+      <footer class="FooterNavlink">
+        <div class="footer_navlink1">
+          <div class="footer_navlink1_1">
+            <div class="navlink_logo">
+              <img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Flogo_wanted_black.png&amp;w=110&amp;q=100" alt="wanted">
+            </div>
+            <div class="navlink_links">
+              <a href="https://www.wantedlab.com/" class="" aria-label="" target="_blank" rel="noopener noreferrer" data-attribute-id="fnb" data-fnb-kind="investment">기업소개</a>
+              <a href="https://help.wanted.co.kr/hc/ko/articles/360035844551" class="" aria-label="" target="_blank" rel="noopener noreferrer" data-attribute-id="fnb" data-fnb-kind="termsOfUse">이용약관</a>
+              <a href="https://www.wanted.co.kr/privacy" class="" aria-label="" target="_blank" rel="noopener noreferrer" data-attribute-id="fnb" data-fnb-kind="privacyPolicy">개인정보 처리방침</a>
+              <a href="https://help.wanted.co.kr/hc/ko/" class="" aria-label="" target="_blank" rel="noopener noreferrer" data-attribute-id="fnb" data-fnb-kind="FAQ">고객센터</a>
+            </div>
+          </div>
+          <div class="footer_navlink1_2">
+            <a href="https://www.instagram.com/wantedjobs.kr/" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_instagram.png&amp;w=20&amp;q=100" alt="instagram"></a>
+            <a href="https://www.youtube.com/channel/UC0tGZ6MqieGG2m5lA5PeQsw" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_youtube.png&amp;w=25&amp;q=100" alt="youtube"></a>
+            <a href="https://www.facebook.com/wantedkr" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_facebook.png&amp;w=20&amp;q=100" alt="facebook"></a>
+            <a href="https://blog.naver.com/wantedlab" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_blog.png&amp;w=20&amp;q=100" alt="blog"></a>
+            <a href="https://pf.kakao.com/_XqCIxl" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_kakao.png&amp;w=19&amp;q=100" alt="kakao"></a>
+            <a href="https://post.naver.com/my.nhn?memberNo=18284175" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_post.png&amp;w=20&amp;q=100" alt="post"></a>
+            <a href="https://apps.apple.com/kr/app/id1074569961" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_apple.png&amp;w=17&amp;q=100" alt="apple"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.wanted.android.wanted" class="" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_google.png&amp;w=17&amp;q=100" alt="google"></a>
+          </div>
         </div>
-        <div>
-          <a>기업소개</a>
-          <a>이용약관</a>
-          <a>개인정보 처리방침</a>
-          <a>고객센터</a>
+        <div class="footer_navlink2">
+          <p class="footer_navlink2_text">
+            (주)원티드랩 (대표이사:이복기) | 서울특별시 송파구 올림픽로 300 롯데월드타워 35층 | 통신판매번호 : 2020-서울송파-3147
+            <br>
+            유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | (국외) 서울동부-유-2020-2 | 사업자등록번호 : 299-86-00021 | 02-539-7118
+            <br>© Wantedlab, Inc.
+          </p>
+          <div class="footer_local_select">
+            <img class="countryIcon" src="https://static.wanted.co.kr/images/userweb/ico_KR.svg" alt="country flag KR">
+            <!-- <select>
+              <option value="KR">한국 (한국어)</option>
+              <option value="JP">日本 (日本語)</option>
+              <option value="WW">Worldwide (English)</option>
+              <option value="SG">Singapore (English)</option>
+            </select> -->
+            <select id="select_btn">
+              <option value="KR">한국 (한국어)</option>
+              <option value="JP">日本 (日本語)</option>
+              <option value="WW">Worldwide (English)</option>
+              <option value="SG">Singapore (English)</option>
+            </select>
+            <!-- <i class="icon-arrow_bottom_fill">
+              ::before
+            </i> -->
+            <i class="fa-solid fa-sort-down"></i>
+          </div>
         </div>
       </footer>
     </main>
