--- a/Wanted/html파일/second.html
+++ b/Wanted/html파일/second.html
@@ -255,6 +255,7 @@
                   <!-- transform: translate3d(0px, 0px, 0px); -->
                   <div class="slick-list">
                     <div class="slick-track" style="width: 2772px; opacity: 1">
+                      <!-- 2772px = 173.25rem -->
                       <!-- 나중에 더 추가하기 -->
                       <div
                         data-index="0"
