--- a/Wanted/html파일/develop.html
+++ b/Wanted/html파일/develop.html
@@ -79,11 +79,11 @@
     <article role="navigation" class="categoryNavbarContainer">
       <div class="categoryNavbarBody">
         <button
-          class="categoryNavbarBodyField"
+          class="categoryNavbarBodyFieldBox"
           type="button"
           aria-label="popup navigation button"
         >
-          <span class="categoryNavbarBodyFieldText">개발</span>
+          <span class="categoryNavbarBodyFieldText1">개발</span>
           <span
             class="moreButton"
             role="button"
@@ -106,10 +106,10 @@
         <span class="categoryNavbarBodyFieldLine">|</span>
         <button
           type="button"
-          class="categoryNavbarBodyFieldGroup"
+          class="categoryNavbarBodyFieldBox"
           aria-label="popup navigation button"
         >
-          <span class="categoryNavbarBodyFieldroupText">개발 전체</span>
+          <span class="categoryNavbarBodyFieldText2">개발 전체</span>
           <span
             class="moreButton"
             role="button"
@@ -131,8 +131,264 @@
         </button>
       </div>
     </article>
-    <section class="filterListWrapper"></section>
+    <section class="filterListWrapper set_mwidth">
+      <div class="filterListButtonContainer">
+        <div class="filterListButtonBox">
+          <!-- 지역 -->
+          <button type="button" class="filterButtonSet">
+            <span class="filterButtonFirst"
+              >지역
+              <span class="filterdCount">1</span>
+            </span>
+            <span class="filterButtonSecond">한국</span>
+          </button>
+          <!-- 경력 -->
+          <div class="filterListInnerSpace">
+            <button type="button" class="filterButtonSet">
+              <span class="filterButtonFirst">경력</span>
+              <span class="filterButtonSecond">전체</span>
+              <svg
+                width="8"
+                height="7"
+                viewBox="0 0 8 7"
+                fill="none"
+                xmlns="https://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z"
+                  fill="#333333"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <!-- 기술스택 -->
+          <div class="filterListInnerSpace">
+            <button type="button" class="filterButtonSet">
+              <span class="filterButtonFirst">기술스택</span>
+              <span class="filterButtonSecond"></span>
+              <svg
+                width="8"
+                height="7"
+                viewBox="0 0 8 7"
+                fill="none"
+                xmlns="https://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z"
+                  fill="#333333"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <!-- 어떤 순서로 검색할지 filter -->
+        <div class="filterListCustomButton">
+          <button class="" type="button">
+            응답률순
+            <svg
+              width="8"
+              height="7"
+              viewBox="0 0 8 7"
+              fill="none"
+              xmlns="https://www.w3.org/2000/svg"
+            >
+              <path
+                d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z"
+                fill="#333333"
+              ></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <section class="tagFilter">
+        <div>
+          <div class="tagList">
+            <div class="tagListTrack" style="width: 2772px; opacity: 1">
+              <!-- 2772px = 173.25rem -->
+              <div
+                data-index="0"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="false"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(242, 251, 245)"
+                  >
+                    연봉이 최고의 복지
+                    <img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F634f02e0-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75"
+                      alt="연봉이 최고의 복지"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="1"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="false"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(243, 249, 254)"
+                  >
+                    재택근무<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F5d873f3a-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75"
+                      alt="재택근무"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="2"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="false"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(243, 242, 251)"
+                  >
+                    퇴사율 10% 이하<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F7d3cdb3c-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75"
+                      alt="퇴사율 10% 이하"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="3"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="false"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(246, 248, 238)"
+                  >
+                    급성장 중<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F37dacf86-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75"
+                      alt="급성장 중"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="4"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="false"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(247, 242, 249)"
+                  >
+                    병역특례<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F6eda33d2-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75"
+                      alt="병역특례"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="5"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="true"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(238, 250, 249)"
+                  >
+                    50인 이하️<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F3a965d18-c524-11ec-901c-acde48001122.png&amp;w=50&amp;q=75"
+                      alt="50인 이하️"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="6"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="true"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(239, 241, 251)"
+                  >
+                    50인 이상️<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F4cec3244-c524-11ec-901c-acde48001122.png&amp;w=50&amp;q=75"
+                      alt="50인 이상️"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div
+                data-index="7"
+                class="tagListSlide"
+                tabindex="-1"
+                aria-hidden="true"
+                style="outline: none"
+              >
+                <div>
+                  <button
+                    type="button"
+                    class="tagListItem"
+                    style="background: rgb(242, 251, 245)"
+                  >
+                    업력 5년 이상<img
+                      src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F45bb9794-c524-11ec-901c-acde48001122.png&amp;w=50&amp;q=75"
+                      alt="업력 5년 이상"
+                    />
+                  </button>
+                </div>
+              </div>
+              <button
+                type="button"
+                class="navbarFilterListArrowR set_center"
+                aria-label="next button"
+              >
+                <span class="SvgIconRoot">
+                  <svg class="root__svg__DKYBi" viewBox="0 0 18 18">
+                    <path
+                      d="m11.955 9-5.978 5.977a.563.563 0 0 0 .796.796l6.375-6.375a.563.563 0 0 0 0-.796L6.773 2.227a.562.562 0 1 0-.796.796L11.955 9z"
+                    ></path>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <div id="horizontal_line"></div>
+    <hr class="horizontal_line_test" />
+
     <section class="jobListWrapper"></section>
+
     <!-- <button class="seeMoreWrapper">
       <div class="seeMoreContainer">
         <div>
