--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -43,6 +43,33 @@
               style="width: 17px; height: 14px; object-fit: contain"
             />
           </button>
+          <!-- hover할 list -->
+          <ul class="mainCategoryList">
+            <li>
+              <em>직군 전체</em>
+            </li>
+            <li>
+              <em>개발</em>
+            </li>
+            <li><em>경영·비즈니스</em></li>
+            <li><em>마케팅·광고</em></li>
+            <li><em>디자인</em></li>
+            <li><em>영업</em></li>
+            <li><em>고객서비스·리테일</em></li>
+            <li><em>게임 제작</em></li>
+            <li><em>HR</em></li>
+            <li><em>미디어</em></li>
+            <li><em>엔지니어링·설계</em></li>
+            <li><em>금융</em></li>
+            <li><em>제조·생상</em></li>
+            <li><em>물류·무역</em></li>
+            <li><em>의료·제약·바이오</em></li>
+            <li><em>교육</em></li>
+            <li><em>식·음료</em></li>
+            <li><em>법률·법집행기관</em></li>
+            <li><em>건설·시설</em></li>
+            <li><em>공공·복지</em></li>
+          </ul>
           <!-- header 좌측 wanted 글자 -->
           <div class="main__logo">Wanted</div>
         </div>
