--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -785,12 +785,6 @@
           </p>
           <div class="footer_local_select">
             <img class="countryIcon" src="https://static.wanted.co.kr/images/userweb/ico_KR.svg" alt="country flag KR">
-            <!-- <select>
-              <option value="KR">한국 (한국어)</option>
-              <option value="JP">日本 (日本語)</option>
-              <option value="WW">Worldwide (English)</option>
-              <option value="SG">Singapore (English)</option>
-            </select> -->
             <select id="select_btn">
               <option value="KR">한국 (한국어)</option>
               <option value="JP">日本 (日本語)</option>
@@ -807,10 +801,10 @@
     </main>
     <!-- 회원가입 모달창 부분 -->
     <div class="signInMalBackground">
-      <div class="signInMal">
+      <div class="signin_mal">
         <div class="signInMalHead">
           <img src="https://img.hankyung.com/photo/202112/01.26651490.1.jpg" alt="">
-          <button>
+          <button id="signin_button">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
               <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
             </svg>
@@ -876,5 +870,27 @@
         </div>
       </div>
     </div>
+    <div>
+      <div id="signin_mal">
+        <div class="signInMalHead">
+          회원가입
+          <button id="signin_button">
+            <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
+              <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
+            </svg>
+          </button>
+        </div>
+        <div class="signInNextMalBody">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        
+      </div>
+    </div>
+    <!-- <script src="../js파일/wanted.js"></script> -->
   </body>
 </html>
