--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -801,7 +801,7 @@
     </main>
     <!-- 회원가입 모달창 부분 -->
     <div class="signInMalBackground">
-      <div class="signin_mal">
+      <div id="signin_mal">
         <div class="signInMalHead">
           <img src="https://img.hankyung.com/photo/202112/01.26651490.1.jpg" alt="">
           <button id="signin_button">
@@ -870,7 +870,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <!-- <div>
       <div id="signin_mal">
         <div class="signInMalHead">
           회원가입
@@ -890,7 +890,7 @@
         </div>
         
       </div>
-    </div>
+    </div> -->
     <!-- <script src="../js파일/wanted.js"></script> -->
   </body>
 </html>
