--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -50,7 +50,7 @@
                 <em>직군 전체</em>
               </li>
               <li>
-                <em>개발</em>
+                <a href="../html파일/develop.html"><em>개발</em></a>
               </li>
               <li><em>경영·비즈니스</em></li>
               <li><em>마케팅·광고</em></li>
@@ -78,7 +78,7 @@
         </div>
         <!-- header 가운데 글씨부분 -->
         <ul class="navbar__list">
-          <li><a>채용</a></li>
+          <li><a href="../html파일/jobdetail.html">채용</a></li>
           <li><a>이벤트</a></li>
           <li><a>직군별 연봉</a></li>
           <li><a>이력서</a></li>
@@ -92,7 +92,7 @@
             <button class="SearchButton" type="button">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-            <button class="SignUpButton">회원가입/로그인</button>
+            <button id="signup_button">회원가입/로그인</button>
           </ul>
           <div class="draw_small_line"></div>
           <div class="ServiceButton">기업서비스</div>
@@ -799,12 +799,13 @@
         </div>
       </footer>
     </main>
+
     <!-- 회원가입 모달창 부분 -->
-    <div class="signInMalBackground">
-      <div id="signin_mal">
+    <div id="signinmal_background">
+      <div class="signInMal">
         <div class="signInMalHead">
           <img src="https://img.hankyung.com/photo/202112/01.26651490.1.jpg" alt="">
-          <button id="signin_button">
+          <button id="signin_close_button">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
               <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
             </svg>
@@ -869,28 +870,139 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- <div>
-      <div id="signin_mal">
+      <div id="signinmal_second" class="signInMal">
         <div class="signInMalHead">
-          회원가입
-          <button id="signin_button">
+          <div class="set_center">회원가입</div>
+          <button id="signin_close_button">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
               <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
             </svg>
           </button>
         </div>
-        <div class="signInNextMalBody">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="signInMalBody">
+          <form id="signin_form">
+            <p>이메일</p>
+            <input type="text" placeholder="이름을 입력해주세요.">
+            <p>휴대폰 번호</p>
+            <div>
+              <!-- 여기 수정하기 -->
+              <div class="phoneNumberCountryContainer">
+                <select class="phoneNumberCountry">
+                  <option value="KR">South Korea +82</option>
+                  <option value="JP">Japan +81</option>
+                  <option value="TW">Taiwan +886</option>
+                  <option value="HK">Hong Kong +852</option>
+                  <option value="SG">Singapore +65</option>
+                  <option value="AF">Afghanistan +93</option>
+                  <option value="AL">Albania +355</option>
+                  <option value="DZ">Algeria +213</option>
+                  <option value="AO">Angola +244</option>
+                  <option value="AR">Argentina +54</option>
+                  <option value="AM">Armenia +374</option>
+                  <option value="AW">Aruba +297</option>
+                  <option value="AU">Australia +61</option>
+                  <option value="AT">Austria +43</option>
+                  <option value="AZ">Azerbaijan +994</option>
+                  <option value="BH">Bahrain +973</option>
+                  <option value="BD">Bangladesh +880</option>
+                  <option value="BY">Belarus +375</option>
+                  <option value="BE">Belgium +32</option>
+                  <option value="BZ">Belize +501</option>
+                  <option value="BJ">Benin +229</option>
+                  <option value="BT">Bhutan +975</option>
+                  <option value="BO">Bolivia +591</option>
+                  <option value="BW">Botswana +267</option>
+                  <option value="BR">Brazil +55</option>
+                  <option value="BN">Brunei +673</option>
+                  <option value="BG">Bulgaria +359</option>
+                  <option value="BF">Burkina Faso +226</option>
+                  <option value="KH">Cambodia +855</option>
+                  <option value="CM">Cameroon +237</option>
+                  <option value="CA">Canada +1</option>
+                  <option value="CL">Chile +56</option>
+                  <option value="CN">China +86</option>
+                  <option value="CX">Christmas Island +61</option>
+                  <option value="CC">Cocos Islands +61</option>
+                  <option value="CO">Colombia +57</option>
+                  <option value="KM">Comoros +269</option>
+                  <option value="CR">Costa Rica +506</option>
+                  <option value="HR">Croatia +385</option>
+                  <option value="CU">Cuba +53</option>
+                  <option value="CW">Curacao +599</option>
+                  <option value="CY">Cyprus +357</option>
+                  <option value="CZ">Czech Republic +420</option>
+                  <option value="DK">Denmark +45</option>
+                  <option value="DJ">Djibouti +253</option>
+                  <option value="EC">Ecuador +593</option>
+                  <option value="EG">Egypt +20</option>
+                  <option value="SV">El Salvador +503</option>
+                  <option value="GQ">Equatorial Guinea +240</option>
+                  <option value="EE">Estonia +372</option>
+                  <option value="ET">Ethiopia +251</option>
+                  <option value="FO">Faroe Islands +298</option>
+                  <option value="FJ">Fiji +679</option>
+                  <option value="FI">Finland +358</option>
+                  <option value="FR">France +33</option>
+                  <option value="PF">French Polynesia +689</option>
+                  <option value="GM">Gambia +220</option>
+                  <option value="GE">Georgia +995</option>
+                  <option value="DE">Germany +49</option>
+                  <option value="GH">Ghana +233</option>
+                  <option value="GR">Greece +30</option>
+                  <option value="GL">Greenland +299</option>
+                  <option value="GT">Guatemala +502</option>
+                  <option value="GN">Guinea +224</option>
+                  <option value="GY">Guyana +592</option>
+                  <option value="HT">Haiti +509</option>
+                  <option value="HN">Honduras +504</option>
+                  <option value="HU">Hungary +36</option>
+                  <option value="IS">Iceland +354</option>
+                  <option value="IN">India +91</option>
+                  <option value="ID">Indonesia +62</option>
+                  <option value="IR">Iran +98</option>
+                  <option value="IQ">Iraq +964</option>
+                  <option value="IE">Ireland +353</option>
+                  <option value="IL">Israel +972</option>
+                  <option value="IT">Italy +39</option>
+                  <option value="JO">Jordan +962</option>
+                  <option value="KZ">Kazakhstan +7</option>
+                  <option value="KE">Kenya +254</option>
+                  <option value="XK">Kosovo +383</option>
+                  <option value="KW">Kuwait +965</option>
+                  <option value="KG">Kyrgyzstan +996</option>
+                  <option value="LA">Laos +856</option>
+                  <option value="LV">Latvia +371</option>
+                  <option value="LB">Lebanon +961</option>
+                  <option value="LY">Libya +218</option>
+                  <option value="LI">Liechtenstein +423</option>
+                  <option value="LT">Lithuania +370</option>
+                  <option value="LU">Luxembourg +352</option>
+                  <option value="MO">Macau +853</option>
+                  <option value="MK">Macedonia +389</option>
+                  <option value="MG">Madagascar +261</option>
+                  <option value="MW">Malawi +265</option>
+                  <option value="MY">Malaysia +60</option>
+                  <option value="MV">Maldives +960</option>
+                  <option value="ML">Mali +223</option>
+                  <option value="MT">Malta +356</option>
+                  <option value="MH">Marshall Islands +692</option>
+                  <option value="SY">Syria +963</option>
+                  <option value="TH">Thailand +66</option>
+                </select>
+                <span class="signInMalDownArrow">
+                  <svg viewBox="0 0 10 6" class="SvgIconRoot">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M5 3.93934L1.28033 0.21967C0.987437 -0.0732233 0.512563 -0.0732233 0.21967 0.21967C-0.0732233 0.512563 -0.0732233 0.987437 0.21967 1.28033L4.46967 5.53033C4.76256 5.82322 5.23744 5.82322 5.53033 5.53033L9.78033 1.28033C10.0732 0.987437 10.0732 0.512563 9.78033 0.21967C9.48744 -0.0732233 9.01256 -0.0732233 8.71967 0.21967L5 3.93934Z" fill="var(--theme-palette-colors-gray-900)"></path>
+                  </svg>
+                </span>
+
+              </div>
+            </div>
+          </form>
         </div>
-        
+
       </div>
-    </div> -->
-    <!-- <script src="../js파일/wanted.js"></script> -->
+    </div>
+
+    <script src="../js파일/wanted.js"></script>
   </body>
 </html>
