--- a/Wanted/html파일/develop.html
+++ b/Wanted/html파일/develop.html
@@ -44,12 +44,10 @@
         <!-- 윗부분 전부 -->
         <div class="navbarMenu">
           <!-- 로고 부분만 -->
-          <div class="mainCategoryListPopUp">
-            <button type="button" class="hamberger__button">
+          <div class="mainCategoryListPopUp set_center">
+            <button type="button" class="hambergerButton">
               <img
-                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75"
-                style="width: 17px; height: 14px; object-fit: contain"
-              />
+                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75" />
             </button>
             <!-- hover할 list -->
             <ul class="mainCategoryList">
