--- a/Wanted/html파일/jobdetail.html
+++ b/Wanted/html파일/jobdetail.html
@@ -45,12 +45,10 @@
         <!-- 윗부분 전부 -->
         <div class="navbarMenu">
           <!-- 로고 부분만 -->
-          <div class="mainCategoryListPopUp">
-            <button type="button" class="hamberger__button">
+          <div class="mainCategoryListPopUp set_center">
+            <button type="button" class="hambergerButton">
               <img
-                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75"
-                style="width: 17px; height: 14px; object-fit: contain"
-              />
+                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75"/>
             </button>
             <!-- hover할 list -->
             <ul class="mainCategoryList">
@@ -641,8 +639,8 @@
       <div class="seeMoreContainer">
         <div>
           <!-- <img src="http://cdn.onlinewebfonts.com/svg/img_455851.png" alt=""> -->
-          <i class="fa-solid fa-won-sign"></i>
-          <span class="seeMoreText">[ 서비스기획자 ] 3년차 3,500만원이면 잘 받는 건가요?</span>
+          <i class="fa-light fa-file-lines"></i>
+          <span class="seeMoreText">서류 통과가 잘 되는 이력서 양식을 찾으시나요?</span>
         </div>
         <div class="seeMoreButton">
           <span>더 알아보기</span>
