--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -37,12 +37,10 @@
         <!-- 윗부분 전부 -->
         <div class="navbar__menu">
           <!-- 로고부분만 -->
-          <div class="mainCategoryListPopUp">
+          <div class="mainCategoryListPopUp set_center">
             <button type="button" class="hamberger__button">
               <img
-                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75"
-                style="width: 17px; height: 14px; object-fit: contain"
-              />
+                src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&amp;w=undefined&amp;q=75"/>
             </button>
             <!-- hover할 list -->
             <ul class="mainCategoryList">
@@ -74,7 +72,7 @@
           </div>
           
           <!-- header 좌측 wanted 글자 -->
-          <div class="main__logo">Wanted</div>
+          <div class="main__logo set_center">Wanted</div>
         </div>
         <!-- header 가운데 글씨부분 -->
         <ul class="navbar__list">
@@ -875,17 +873,19 @@
           <div class="set_center">회원가입</div>
           <button id="signin_close_button">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
-              <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
+              <path
+                fill="currentColor"
+                d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"
+              ></path>
             </svg>
           </button>
         </div>
         <div class="signInMalBody">
           <form id="signin_form">
             <p>이메일</p>
-            <input type="text" placeholder="이름을 입력해주세요.">
+            <input type="text" placeholder="이름을 입력해주세요." />
             <p>휴대폰 번호</p>
             <div>
-              <!-- 여기 수정하기 -->
               <div class="phoneNumberCountryContainer">
                 <select class="phoneNumberCountry">
                   <option value="KR">South Korea +82</option>
@@ -991,15 +991,67 @@
                 </select>
                 <span class="signInMalDownArrow">
                   <svg viewBox="0 0 10 6" class="SvgIconRoot">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M5 3.93934L1.28033 0.21967C0.987437 -0.0732233 0.512563 -0.0732233 0.21967 0.21967C-0.0732233 0.512563 -0.0732233 0.987437 0.21967 1.28033L4.46967 5.53033C4.76256 5.82322 5.23744 5.82322 5.53033 5.53033L9.78033 1.28033C10.0732 0.987437 10.0732 0.512563 9.78033 0.21967C9.48744 -0.0732233 9.01256 -0.0732233 8.71967 0.21967L5 3.93934Z" fill="var(--theme-palette-colors-gray-900)"></path>
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M5 3.93934L1.28033 0.21967C0.987437 -0.0732233 0.512563 -0.0732233 0.21967 0.21967C-0.0732233 0.512563 -0.0732233 0.987437 0.21967 1.28033L4.46967 5.53033C4.76256 5.82322 5.23744 5.82322 5.53033 5.53033L9.78033 1.28033C10.0732 0.987437 10.0732 0.512563 9.78033 0.21967C9.48744 -0.0732233 9.01256 -0.0732233 8.71967 0.21967L5 3.93934Z"
+                      fill="var(--theme-palette-colors-gray-900)"
+                    ></path>
                   </svg>
                 </span>
-
+              </div>
+              <div class="phoneNumber">
+                <input
+                  type="text"
+                  placeholder="(예시) 01013245768"
+                  name="mobile"
+                  class="phoneNumberExample"
+                  value=""
+                />
+                <button class="phoneNumberButton">
+                  <span>인증번호 받기</span>
+                </button>
+              </div>
+              <div class="phoneNumber">
+                <input type="text" placeholder="인증번호를 입력해주세요." name="authCode" readonly="" class="phoneNumberVerification" value="">
+              </div>
+            </div>
+            <p>비밀번호</p>
+            <input type="password" placeholder="비밀번호를 입력해주세요." name="password">
+            <input type="password" placeholder="비밀번호를 다시 한번 입력해주세요." name="passwordConfirm">
+            <p class="passwordDetail">영문 대소문자, 숫자, 특수문자를 3가지 이상으로 조합해 8자 이상 16자 이하로 입력해주세요.</p>
+            <div class="checkBoxContainer">
+              <div class="checkBoxBox1">
+                <div class="checkBox"></div>
+                <p class="checkBoxAllowAll">전체동의</p>
+              </div>
+              <hr style="border: none; border-bottom: 0.063rem solid #e1e2e3;">
+              <div class="checkBoxBox2">
+                <div class="checkBox"></div>
+                <p>만 14세 이상입니다. (필수)</p>
+              </div>
+              <div class="checkBoxBox2">
+                <div class="checkBoxBox2InnerBox">
+                  <div class="checkBox"></div>
+                  <p>oneID 이용약관 동의 (필수)</p>
+                </div>
+                <p style="font-weight: 600; color: #888;">자세히</p>
+              </div>
+              <div class="checkBoxBox2">
+                <div class="checkBoxBox2InnerBox">
+                  <div class="checkBox"></div>
+                  <p>개인정보 및 수집 이용 동의 (필수)</p>
+                </div>
+                <p style="font-weight: 600; color: #888;">자세히</p>
+              </div>
+              <div>
+                <button id="signinmal_second_signin_button">
+                  <span>가입하기</span>
+                </button>
               </div>
             </div>
           </form>
         </div>
-
       </div>
     </div>
 
